# pp6calculator

./: ._FileReader-1.0.0  CMakeLists.txt  README.md  pp6calculator.cpp
Day2/: pp6calculator  pp6calculator.cpp
Day2/PP6Lib/: PP6Math.cpp  PP6Math.hpp
FileReader-1.0.0/: FileReader.hpp
PP6Lib/: CMakeLists.txt  Day.hpp  Day1Menu.cpp  Day2Menu.cpp  Day3Menu.cpp  Day4Menu.cpp  PP6Day1Math.cpp  PP6Day2meanE.cpp  PP6Day2meanE.hpp  PP6Day2muon.cpp  PP6Day3boost.cpp  PP6Day3boost.hpp  PP6Day3muon.hpp  PP6Day4Excercises.cpp  PP6Day4Excercises.hpp  PP6Day4muon.cpp  PP6Day4muon.hpp  PP6FourVector.cpp  PP6FourVector.hpp  PP6MathDay1.cpp  PP6MathDay1.hpp  PP6MathDay2.cpp  PP6MathDay2.hpp  PP6Particle.cpp  PP6Particle.hpp  PP6ParticleInfo.cpp  PP6ParticleInfo.hpp  PP6ThreeVector.cpp  PP6ThreeVector.hpp  day2.cpp
day1/: ex1  ex1.cpp  ex3  ex3.cpp  ex4  ex4.cpp  ex5  hmw  hmw.cpp
day2/: ex1  ex1.cpp
helloworld/: ex2  ex2.cpp
